[tool.poetry]
name = "frequency-ai"
version = "0.1.3"
description = "Effiently serve LoRA tuned models"
authors = ["Patrick Barker <patrickbarkerco@gmail.com>"]
license = "Apache 2.0"
readme = "README.md"
packages = [
    {include = "frequency"}
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.108.0"
sqlalchemy = "^2.0.25"
uvicorn = "^0.25.0"
azure-core = "^1.29.6"
isodate = "^0.6.1"
transformers-stream-generator = "^0.0.4"
einops = "^0.7.0"
torchvision = "^0.16.2"
pillow = "^10.2.0"
ipykernel = "^6.28.0"

[tool.poetry.group.gcp.dependencies]
google-cloud-storage = "^2.14.0"


[tool.poetry.group.hf.dependencies]
transformers = "^4.36.2"
peft = "^0.7.1"


[tool.poetry.group.runpod.dependencies]
runpod = "^1.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
